<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorGreyBackground"
    android:orientation="vertical"
    tools:context=".AddEditProductActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_scan_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_photo_camera" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <EditText
                    android:id="@+id/edit_text_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="27dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:ems="5"
                    android:hint="@string/edit_view_title"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/colorGreyText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_view_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_view_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/text_view_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_title"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/edit_text_barcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_text_title"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:ems="5"
                    android:hint="@string/edit_view_barcode"
                    android:inputType="textMultiLine"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/colorGreyText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_view_barcode"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_title" />

                <TextView
                    android:id="@+id/text_view_barcode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/text_view_barcode"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_barcode"
                    app:layout_constraintStart_toStartOf="parent" />

                <!--<TextView-->
                    <!--android:id="@+id/text_view_group_name"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_below="@id/edit_text_barcode"-->
                    <!--android:layout_marginStart="46dp"-->
                    <!--android:layout_marginTop="32dp"-->
                    <!--android:layout_marginEnd="8dp"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
                    <!--android:textColor="@color/colorGreyText"-->
                    <!--app:layout_constraintEnd_toEndOf="parent"-->
                    <!--app:layout_constraintHorizontal_bias="0.0"-->
                    <!--app:layout_constraintStart_toEndOf="@+id/text_view_group"-->
                    <!--app:layout_constraintTop_toBottomOf="@+id/edit_text_price" />-->

                <!--<TextView-->
                    <!--android:id="@+id/text_view_group"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginStart="8dp"-->
                    <!--android:text="@string/text_view_group"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
                    <!--android:textColor="@color/colorAccent"-->
                    <!--app:layout_constraintBaseline_toBaselineOf="@+id/text_view_group_name"-->
                    <!--app:layout_constraintStart_toStartOf="parent" />-->

                <EditText
                    android:id="@+id/edit_text_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_text_barcode"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/edit_view_amount"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/colorGreyText"
                    app:layout_constraintEnd_toStartOf="@+id/image_button_decrease"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/text_view_amount"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_barcode" />

                <TextView
                    android:id="@+id/text_view_amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/text_view_amount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_amount"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/edit_text_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_text_barcode"
                    android:layout_marginStart="43dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/edit_view_unit"
                    android:inputType="text"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/colorGreyText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_view_unit"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_amount" />

                <TextView
                    android:id="@+id/text_view_unit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/text_view_unit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_unit"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/edit_text_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_text_barcode"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/edit_view_price"
                    android:inputType="numberDecimal"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColor="@color/colorGreyText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/text_view_price"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_unit" />

                <TextView
                    android:id="@+id/text_view_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/text_view_price"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_price"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/edit_text_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_text_barcode"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/edit_view_description"
                    android:inputType="textMultiLine"
                    android:textColor="@color/colorGreyText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_view_description" />

                <TextView
                    android:id="@+id/text_view_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/text_view_description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_price" />

                <ImageButton
                    android:id="@+id/image_button_decrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/image_button_decrease"
                    app:layout_constraintEnd_toStartOf="@+id/image_button_increase"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_barcode"
                    app:srcCompat="@drawable/ic_remove_grey"
                    app:tint="@color/colorWhiteBackground" />

                <ImageButton
                    android:id="@+id/image_button_increase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/colorAccent"
                    android:contentDescription="@string/image_button_increase"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_barcode"
                    app:srcCompat="@drawable/ic_add_grey"
                    app:tint="@color/colorWhiteBackground" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>